--- a/src/app/components/todo/todo-item/todo-item.component.scss
+++ b/src/app/components/todo/todo-item/todo-item.component.scss
@@ -52,7 +52,7 @@
 
     &-actions {
       border: none;
-      background-color: #DCD9D9;
+      background-color: var(--grey-color);
       width: 20px;
       height: 20px;
       border-radius: 50%;
