Edit, delete, search and more

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins:wght@400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins:wght@400;500;600;700&display=swap');
 
 :root {
   --light-color: #ffffff;
@@ -6,6 +6,7 @@
   --grey-color: #E0E0E0;
   --primary-color: #F3477A;
   --secondary-color: #884CB2;
+  --danger-color: #EB5757;
   --primary-font: 'Poppins', sans-serif;
   --secondary-font: 'Montserrat', serif;
 }
