--- a/src/app/components/search-bar/search-bar.component.scss
+++ b/src/app/components/search-bar/search-bar.component.scss
@@ -1,6 +1,25 @@
 .search-form {
   display: flex;
   align-items: center;
+  position: relative;
+
+  &::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0;
+    height: 2px;
+    background-color: var(--primary-color);
+    transition: width 0.5s ease-in-out;
+  }
+
+  &:focus-within {
+    &::after {
+      width: 100%;
+      transition: width 0.5s ease-in-out;
+    }
+  }
 
   &__btn {
     background-color: transparent;
@@ -9,18 +28,13 @@
 
   &__input {
     border: none;
-    width: 100%;
-
-    &::after {
-      content: '';
-      display: block;
-      width: 100%;
-      height: 2px;
-      background-color: var(--primary-color);
-    }
+    width: 150px;
+    transition: width 0.5s ease-in-out;
 
     &:focus {
       outline: none;
+      width: 100%;
+      transition: width 0.5s ease-in-out;
     }
   }
 }
