--- a/src/app/components/todo/todo-item/todo-item.component.scss
+++ b/src/app/components/todo/todo-item/todo-item.component.scss
@@ -49,14 +49,76 @@
         border: 2px solid var(--dark-color);
       }
     }
+  }
 
-    &-actions {
+  &__actions {
+    $a: &;
+
+    &--wrap {
+      position: relative;
+      width: 25px;
+      &:hover {
+        #{$a}-list {
+          visibility: visible;
+          opacity: 1;
+        }
+      }
+    }
+
+    &-btn {
       border: none;
       background-color: var(--grey-color);
       width: 20px;
+      margin: auto;
       height: 20px;
       border-radius: 50%;
       cursor: pointer;
+    }
+
+    &-list {
+      list-style: none;
+      visibility: hidden;
+      position: absolute;
+      width: 80px;
+      text-align: center;
+      background-color: var(--light-color);
+      box-shadow: 0 5px 15px rgba(0 0 0 / 50%);
+      padding: 7px;
+      border-radius: 6px;
+      z-index: 1;
+      opacity: 0;
+      transition: opacity 0.3s;
+      top: 100%;
+      left: 50%;
+      transform: translateX(-50%);
+      border: 1px solid var(--primary-color);
+
+      &::before {
+        content: "";
+        width: 6px;
+        height: 6px;
+        display: block;
+        border-left: 1px solid var(--primary-color);
+        border-top: 1px solid var(--primary-color);
+        transform: rotate(45deg) translateX(-50%);
+        position: absolute;
+        left: calc(50% - 2px);
+        top: -2px;
+        background-color: var( --light-color);
+      }
+    }
+
+    &-item {
+      font-family: var(--secondary-font);
+      font-size: 14px;
+      color: #7D859A;
+      padding: 3px 0;
+      cursor: pointer;
+      font-weight: 500;
+
+      &:hover {
+        color: var(--primary-color);
+      }
     }
   }
 }
