--- a/src/app/components/todo/todo-new/todo-new.component.html
+++ b/src/app/components/todo/todo-new/todo-new.component.html
@@ -1,37 +1,5 @@
 <app-todo-wrapper>
   <h1 class="todo-form__title">Add new todo</h1>
 
-  <form class="todo-form" [formGroup]="newTodoForm" (ngSubmit)="onSubmit()">
-    <div class="todo-form__group">
-      <label class="todo-form__group-label" for="text">
-        What do you need to do?
-      </label>
-      <input id="text" class="todo-form__group-input" type="text" formControlName="text">
-    </div>
-
-    <div class="todo-form__group">
-      <label class="todo-form__group-label" for="status">
-        Define to do status
-      </label>
-      <select id="status" class="todo-form__group-select" formControlName="status">
-        <option *ngFor="let option of todoStatusesOptions;" [ngValue]="option.value">{{option.label}}</option>
-      </select>
-    </div>
-
-    <div class="todo-form__group">
-      <label class="todo-form__group-label" for="severity">
-        What the importance of the task?
-      </label>
-      <select id="severity" class="todo-form__group-select" formControlName="severity">
-        <option *ngFor="let option of todoSeverityOptions;" [ngValue]="option.value">{{option.label}}</option>
-      </select>
-    </div>
-
-    <div class="todo-form__group">
-      <label class="todo-form__group-label" for="deadline">Is there deadline for the task?</label>
-      <input id="deadline" class="todo-form__group-input" type="date" formControlName="deadline">
-    </div>
-
-    <button class="todo-form__submit-btn">Submit</button>
-  </form>
+  <app-todo-form></app-todo-form>
 </app-todo-wrapper>
