--- a/src/app/components/todo/todo-form/todo-form.component.scss
+++ b/src/app/components/todo/todo-form/todo-form.component.scss
@@ -5,24 +5,24 @@
     margin-bottom: 10px;
 
     &-label {
+      color: var(--dark-color);
       display: block;
       font-family: var(--secondary-font);
       font-size: 14px;
       line-height: 27px;
-      color: var(--dark-color);
     }
 
     &-input, &-select {
-      width: 100%;
-      box-sizing: border-box;
       border: none;
       border-bottom: 1px solid var(--grey-color);
+      box-sizing: border-box;
+      padding: 7px 0;
       transition: border-bottom-color 0.5s;
-      padding: 7px 0 7px 0;
+      width: 100%;
 
       &:focus {
-        outline: none;
         border-bottom-color: var(--secondary-color);
+        outline: none;
         transition: border-bottom-color 0.5s;
       }
     }
