--- a/src/app/components/todo/todo-wrapper/todo-wrapper.component.scss
+++ b/src/app/components/todo/todo-wrapper/todo-wrapper.component.scss
@@ -1,12 +1,13 @@
 :host {
   width: 100%;
 }
+
 .todo-root {
   background-color: var(--light-color);
-  padding: 40px 60px;
-  box-shadow: 0px 4px 40px #8CA4D8;
   border-radius: 30px;
+  box-shadow: 0 4px 40px #8CA4D8;
   box-sizing: border-box;
-  width: 100%;
   min-width: 992px;
+  padding: 40px 60px;
+  width: 100%;
 }
